change buffer and chat server design