@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.net.DatagramPacket;
 import java.net.DatagramSocket;
 import java.util.LinkedList;
-import java.util.List;
 
 import org.mobicents.media.server.impl.dsp.audio.g729.Decoder;
 
@@ -17,7 +16,7 @@ public class Sound implements Runnable {
 
 	private String key;
 
-	List<byte[]> lp = new LinkedList<byte[]>();
+	LinkedList<byte[]> lp = new LinkedList<byte[]>();
 
 	public Sound(String key) {
 		this.key = key;
@@ -30,12 +29,13 @@ public class Sound implements Runnable {
 			try {
 				Decoder dec = new Decoder();
 				StackList sl = new StackList();
+				//PlayMedia pm = new PlayMedia(NetAudioFormat.getG729AudioFormat());
 				new Thread(sl).start();
 				while (RtpSystem.run) {
 					byte data[] = null;
 					synchronized (lp) {
 						if (!lp.isEmpty())
-							data = lp.remove(0);
+							data = lp.removeFirst();
 					}
 					if (data != null) {
 						long id = PRead.getLong(data, 10, 4);
@@ -44,6 +44,7 @@ public class Sound implements Runnable {
 						sound = Convert.encrypt(sound, key);
 						sound = dec.process(sound);
 						sl.add(id, new Pack(time, sound));
+						//pm.play(sound);
 					}
 				}
 				sl.close();
@@ -62,7 +63,10 @@ public class Sound implements Runnable {
 			DatagramPacket dp = new DatagramPacket(new byte[30], 30);
 			while (RtpSystem.run) {
 				ds.receive(dp);
-				lp.add(dp.getData().clone());
+				synchronized (lp) {
+					lp.add(dp.getData().clone());
+				}
+
 			}
 		} catch (IOException e) {
 			// TODO Auto-generated catch block
